--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,20 @@
-h1 {
-    color: red;
+/*Fonte Inter*/
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-size: 16px;
 }
+
+:root {
+    --background-color:#F3F5FC;
+    --primary-color: #0A3871;
+    --secondary-color: #495057;
+    --terciary-color: #000000;
+    --fourth-color: #343A40; 
+    --primary-font: "Inter", sans-serif;
+}
+
