--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,20 +1,110 @@
 /*Fonte Inter*/
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
 
-
-*{
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
 }
 
 :root {
-    --background-color:#F3F5FC;
-    --primary-color: #0A3871;
-    --secondary-color: #495057;
-    --terciary-color: #000000;
-    --fourth-color: #343A40; 
-    --primary-font: "Inter", sans-serif;
+  --background-color: #f3f5fc;
+  --primary-color: #0a3871;
+  --secondary-color: #495057;
+  --terciary-color: #000000;
+  --fourth-color: #343a40;
+  --primary-font: "Inter", sans-serif;
 }
+
+.header__container {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+}
+
+.header__container__img {
+  padding: 7% 0% 0% 0%;
+}
+
+.container__content {
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.container__content__primary__section {
+  width: 90%;
+  text-align: start;
+  margin-bottom: 64px;
+}
+
+.input__primary__content__text {
+  width: 100%;
+  min-height: 251px;
+  word-wrap: break-word;
+  font-family: var(--primary-font);
+  font-weight: 400;
+  color: var(--primary-color);
+  margin-top: 25%;
+}
+
+.container__primary__content__info {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  margin-bottom: 16px;
+}
+
+.primary__content__text__info {
+  font-family: var(--primary-font);
+  font-size: 0.75rem;
+  font-weight: 400;
+}
+
+.primary__content__container__btns {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 24px;
+}
+
+.primary__content__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 343px;
+  height: 67px;
+  text-align: center;
+  border: 1px solid var(--primary-color);
+  border-radius: 24px;
+}
+
+.primary__content__btn__text {
+  font-family: var(--primary-font);
+  font-size: 1rem;
+}
+
+#btn__encript {
+  background-color: var(--primary-color);
+  color: var(--background-color);
+  transition: background-color 0.5s ease;
+}
+
+#btn__encript:hover {
+  background-color: #1558aa;
+}
+
+#btn__decript {
+  color: var(--primary-color);
+  transition: background-color 0.5s ease;
+}
+
+#btn__decript:hover {
+  background-color: #ccdff5;
+}
+
 
