--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,7 @@
 
 .container__content {
   width: 100vw;
+  max-width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -107,13 +108,14 @@
   background-color: #ccdff5;
 }
 
-.containar__content__secondary__section {
+.container__content__secondary__section {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
     width: 90%;
+    min-height: 168px;
     background-color: white;
     border-radius: 32px;
     filter: drop-shadow(6px 10px 30px rgba(0,0,0,0.2)); 
@@ -137,8 +139,14 @@
     font-weight: bold;
 }
 
+.content__secondary__decripted__img {
+  margin: 100px 0;
+  display: none; 
+}
+
 #secondary__content__copy__btn {
     width: 279px;
+    display: none;
 }
 
 .footer__container {
