--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,16 +40,35 @@
   width: 90%;
   text-align: start;
   margin-bottom: 64px;
+  margin-top: 116px;
 }
 
-.input__primary__content__text {
+.container__content__input__container {
   width: 100%;
-  min-height: 251px;
-  word-wrap: break-word;
+  height: 700px;
+  display: flex;
+}
+
+.textarea__primary__content{
+  box-sizing: border-box;
+  inline-size: min-content;
+  overflow-wrap: break-word;
+  border: none;
   font-family: var(--primary-font);
   font-weight: 400;
+  font-size: 2rem;
   color: var(--primary-color);
-  margin-top: 25%;
+}
+
+textarea:focus {
+  outline: none;  
+}
+
+#user_text::placeholder {
+  font-family: var(--primary-font);
+  font-weight: 400;
+  font-size: 2rem;
+  color: var(--primary-color);
 }
 
 .container__primary__content__info {
@@ -82,6 +101,7 @@
   text-align: center;
   border: 1px solid var(--primary-color);
   border-radius: 24px;
+  cursor: pointer;
 }
 
 .primary__content__btn__text {
@@ -127,6 +147,7 @@
     align-items: center;
     gap: 20px;
     padding: 5% 8%;
+    max-width: 100%;
 }
 
 .content__secondary__text {
@@ -138,6 +159,7 @@
     font-size: 1.5rem;
     font-weight: bold;
 }
+
 
 .content__secondary__decripted__img {
   margin: 100px 0;
